<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
            android:id="@+id/editText_BillAmount"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="#BBDEFB"
            android:ems="10"
            android:hint="@string/enter_amount_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/MyEditText" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_BillAmount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/editText_BillAmount"
        app:layout_constraintTop_toBottomOf="@+id/editText_BillAmount" />

    <TextView
        android:id="@+id/tipPercentLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tip_percent_text"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tipLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tip_label"
        app:layout_constraintEnd_toEndOf="@+id/tipPercentLbl"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tipPercentLbl"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLbl" />

    <TextView
        android:id="@+id/totalLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/total_label"
        app:layout_constraintEnd_toEndOf="@+id/tipLbl"
        app:layout_constraintStart_toStartOf="@+id/tipLbl"
        app:layout_constraintTop_toBottomOf="@+id/tipLbl" />

    <TextView
        android:id="@+id/tipTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#FFCCBC"
        android:textSize="18sp"
        android:text="@string/tip_text"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/billTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#FFCCBC"
        android:lineSpacingExtra="18sp"
        android:text="@string/tip_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/tipLbl" />

</android.support.constraint.ConstraintLayout>